[metadata]
name = OpenRTM-aist-Python
version = attr: OpenRTM_aist.version.openrtm_version
author = Shinji Kurihara and Noriaki Ando
author_email = n-ando@aist.go.jp
license = LGPL
description = Python modules for OpenRTM-aist
url = http://openrtm.org/
long_description = README.md 

[options]
packages = find_namespace:
zip_safe = True
include_package_data = True

scripts =
    OpenRTM_aist/utils/rtcd/rtcd2_python
    OpenRTM_aist/utils/rtcprof/rtcprof2_python

